Fixed serialization of Self-Employed

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                                     <label for="selfEmployed">Self-Employed/Retired:</label>
                                     <div class="input-group">
                                         <select data-bind="value: selfEmployed" class="form-control">
-                                            <option value="false">No</option>
-                                            <option value="true">Yes</option>
+                                            <option value="0">No</option>
+                                            <option value="1">Yes</option>
                                         </select>
                                     </div>
                                 </fieldset>
