Fixed issue with calculated effective tax rate Fixed type in footer

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h3>Developer</h3>
-                        <p><strong>&copy; 2016 - Jesse Berger</strong>, <a href="https://www.reddit.com/user/valadian">/u/valadian</a><br />Need an web calculator? <a href="mailto:berger_jesse@yahoo.com">email me</a></p>
+                        <p><strong>&copy; 2016 - Jesse Berger</strong>, <a href="https://www.reddit.com/user/valadian">/u/valadian</a><br />Need a web calculator? <a href="mailto:berger_jesse@yahoo.com">email me</a></p>
                     </div>
                     <div class="col-md-6">
                         <h3>Disclaimer</h3>
