Added amazing bar graph

--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
                         <div class="col-md-8">
                             <div class="row">
                                 <div class="panel panel-default">
+                                    <div class="panel-heading">Summary</div>
+                                    <div class="panel-body">
+                                        <div id="summaryHighchart"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="panel panel-default">
                                     <div class="panel-heading">Income &amp; Tax information</div>
                                     <div class="panel-body">
                                         <fieldset class="form-group">
@@ -654,6 +662,7 @@
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <script src="Scripts/bootstrap-notify.min.js"></script>
         <script src="Scripts/jquery.sharrre.min.js"></script>
+        <script src="https://code.highcharts.com/2.2/highcharts.js"></script>
         <script src="Scripts/site.js"></script>
 
 	</body>
