--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta property="og:type"          content="website" />
         <meta property="og:title"         content="Bernie Healthcare Calculator" />
         <meta property="og:description"   content="Javascript calculator to compare Bernie Sanders Single-Payer Healthcare plan to the Affordable Care Act" />
-        <meta property="og:image"         content="https://s.bsd.net/bernie16/main/page/-/website/fb-share.png" />
+        <meta property="og:image"         content="https://cms-assets.berniesanders.com/static/img/fob-sap-social.png" />
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -600,6 +600,8 @@
                                             2016.01.18.2251</a> v0.2.2 Floated savings</p>
                                         <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/385b8db09b36005d6732089ebef33b7d0160902c">
                                             2016.01.19.0031</a> v0.3.0 New Comparison Boxes, New Tax Brackets, & Capital Gains Changes</p>
+                                        <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/385b8db09b36005d6732089ebef33b7d0160902c">
+                                            20120.01.19.2000</a> v0.4.0 Updated to 2020 numbers, implemented HSA tax savings</p>
                                     </div>
                                 </div>
                             </div>
@@ -609,7 +611,7 @@
                         <div class="col-md-2">
                             <div class="social-container">
                                 <ul class="social">
-                                    <li><a href="" id="facebook" data-title="<i id='fa-facebook' class='fa fa-lg fa-facebook'></i>" data-url="http://sandershealthcare.com"></a></li>
+                                    <li><a href="" id="facebook" data-title="<i id='fa-facebook' class='fa fa-lg fa-facebook'></i>" data-url="https://valadian.github.io/SandersHealthcareCalculator/"></a></li>
                                     <li>
                                         <div class="box">
                                             <a id="twitter" data-bind="attr: { href: twitterUrl() }" href="#">
