updating to use sandershealthcare2020.com links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="shortcut icon" href="https://cms-assets.berniesanders.com/static/img/favicon.png">
         
 
-        <meta property="og:url"           content="valadian.github.io/SandersHealthcareCalculator" />
+        <meta property="og:url"           content="www.sandershealthcare2020.com" />
         <meta property="og:type"          content="website" />
         <meta property="og:title"         content="Bernie Healthcare Calculator" />
         <meta property="og:description"   content="Javascript calculator to compare Bernie Sanders Single-Payer Healthcare plan to the Affordable Care Act" />
@@ -336,7 +336,7 @@
                                         <fieldset class="form-group">
                                             <label for="copays">Total Out-of-Pocket Spending:</label>
                                             <div class="input-group form-inline">
-                                                <input data-bind="value: copays, enable: hasInsurance(),
+                                                <input data-bind="value: copays,
                                                 tooltip: {title: 'Total Out-of-Pocket Costs, including payments towards deductible', trigger: 'focus' }" class="form-control currency"
                                                        placeholder="Enter Average Copays" name="copays" />
                                                 <select class="form-control pull-right" data-bind="value: copaysPeriod, enable: hasInsurance()">
@@ -600,7 +600,7 @@
                                             2016.01.18.2251</a> v0.2.2 Floated savings</p>
                                         <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/385b8db09b36005d6732089ebef33b7d0160902c">
                                             2016.01.19.0031</a> v0.3.0 New Comparison Boxes, New Tax Brackets, & Capital Gains Changes</p>
-                                        <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/385b8db09b36005d6732089ebef33b7d0160902c">
+                                        <p><a href="https://github.com/Valadian/SandersHealthcareCalculator/commit/af11725853be3d5bdb2a06772cf0afe4bf73ca84">
                                             20120.01.19.2000</a> v0.4.0 Updated to 2020 numbers, implemented HSA tax savings</p>
                                     </div>
                                 </div>
@@ -611,7 +611,7 @@
                         <div class="col-md-2">
                             <div class="social-container">
                                 <ul class="social">
-                                    <li><a href="" id="facebook" data-title="<i id='fa-facebook' class='fa fa-lg fa-facebook'></i>" data-url="https://valadian.github.io/SandersHealthcareCalculator/"></a></li>
+                                    <li><a href="" id="facebook" data-title="<i id='fa-facebook' class='fa fa-lg fa-facebook'></i>" data-url="https://www.sandershealthcare2020.com/"></a></li>
                                     <li>
                                         <div class="box">
                                             <a id="twitter" data-bind="attr: { href: twitterUrl() }" href="#">
