--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a data-bind="href: copyShareLink" href="#" class="btn btn-social-icon rounded-circle btn-sharelink" >
+                        <a data-bind="click: copyShareLink" href="#" class="btn btn-social-icon rounded-circle btn-sharelink" >
                             <i class="fa fa-link"></i>
                             <input data-bind="value: shareLink()" class="form-control" style="position:absolute; left:-9999px;top:0">
                         </a>
