--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
         <script src="Scripts/bootstrap-notify.min.js"></script>
         <!-- <script src="Scripts/jquery.sharrre.min.js"></script> -->
         <script src="https://code.highcharts.com/2.2/highcharts.js"></script>
-        <script src="Scripts/site.js"></script>
+        <script src="Scripts/site.js?ver=20200226_2355"></script>
         <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 	</body>
